test/domains/bradc/slices/sliceAllDegenerate.good
D is: [1..10, 1..10, 1..10]
D[2.., ..n-1, n/2] is: [2..10, 1..9]
sliceAllDegenerate.chpl:7: error: domain slicing cannot result in rank 0 domain
