test/domains/bradc/slices/sliceAllDegenerate.future
bug: degenerate domain slicing

When completely slicing a domain down to a 0D subdomain,
we currently get a tuple out-of-bounds error.  My sense
is that this case should probably be made illegal.
Arguably, it could also be defined to return an index(D)
for that domain rather than a 0D subdomain, but I don't
know if there's sufficient value in that.  I'd probably
do the error message for now and see if anyone ever
requests the other.
